# userspace-kernel-call

./: .gitignore  ANDROID15_ADAPTATION.md  ARCHITECTURE.md  BUILD_GUIDE.md  CMakeLists.txt  QUICK_START.md  README.md  USAGE_EXAMPLES.md  upload_to_github.sh
.github/workflows/: build.yml
examples/: example_memory_read.cpp
include/: arm64_assembly_bridge.h  data_models.h  kernel_caller.h  kernel_function_locator.h  magisk_interface.h  memory_injector.h  performance_monitor.h  process_manager.h  result.h  signature_scanner.h  skroot_interface.h  stealth_verifier.h  userspace_kernel_call.h
src/: arm64_assembly_bridge.cpp  kernel_caller.cpp  kernel_function_locator.cpp  magisk_interface.cpp  memory_injector.cpp  performance_monitor.cpp  process_manager.cpp  result.cpp  signature_pattern.cpp  signature_scanner.cpp  skroot_interface.cpp  stealth_verifier.cpp  userspace_kernel_call.cpp
tests/: test_arm64_assembly_bridge.cpp  test_kernel_caller.cpp  test_kernel_caller_property.cpp  test_kernel_function_locator.cpp  test_kernel_function_locator_property.cpp  test_memory_injector.cpp  test_memory_injector_property.cpp  test_performance_monitor.cpp  test_performance_monitor_property.cpp  test_process_manager.cpp  test_result.cpp  test_signature_pattern.cpp  test_signature_scanner.cpp  test_signature_scanner_property.cpp  test_stealth_verifier.cpp  test_stealth_verifier_property.cpp  test_userspace_kernel_call_integration.cpp
